--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -42,7 +42,9 @@ under the License.
       </span>
     </a>
     <div class="tocify-wrapper">
-      <%= image_tag "logo.png" %>
+      <div id="brand-logo">
+        <a href="https://scaphold.io"><%= image_tag "logo.png" %></a>
+      </div>
       <% if language_tabs %>
         <div class="lang-selector">
           <% language_tabs.each do |lang| %>
