--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -35,6 +35,16 @@ html, body {
   -webkit-text-size-adjust: none; /* Never autoresize text */
 }
 
+.content a {
+  color: #7eb0c8;
+  text-decoration: none;
+  font-weight: bold;
+
+  &:hover {
+    color: #4b8eaf;
+  }
+}
+
 ////////////////////////////////////////////////////////////////////////////////
 // TABLE OF CONTENTS
 ////////////////////////////////////////////////////////////////////////////////
@@ -76,6 +86,16 @@ html, body {
     a {
       padding-top: 0.5em;
       padding-bottom: 0.5em;
+    }
+  }
+
+  #brand-logo {
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
+
+    img {
+      max-height: 80px;
     }
   }
 
@@ -509,9 +529,9 @@ html, body {
     padding: 2px;
     margin: -2px;
     border-radius: 4px;
-    border: 1px solid #F7E633;
-    text-shadow: 1px 1px 0 #666;
-    background: linear-gradient(to top left, #F7E633 0%, #F1D32F 100%);
+    font-weight: bold;
+    background-color: #eed8e7;
+    text-shadow: none;
   }
 }
 
@@ -543,6 +563,19 @@ html, body {
       color: #fff;
       text-decoration: none;
       border-bottom: dashed 1px #ccc;
+    }
+
+    &.left {
+      float: none;
+      clear: left;
+      background-color: rgba(0,0,0,0.05);
+      color: inherit;
+      text-shadow: none;
+      padding-left: 50px;
+      margin-bottom: 20px;
+      width: 100% - $examples-width;
+
+      @extend %left-col;
     }
   }
 
@@ -598,6 +631,7 @@ html, body {
 
   %left-col {
     margin-right: 0;
+    width: 100%;
   }
 
   .tocify-wrapper .lang-selector {
